--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -569,7 +569,7 @@
   - transit
   - channel_islands_or_isle_of_man
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_nvn_ukot
   :outcome_node: true
 - :current_node: :channel_islands_or_isle_of_man?
   :responses:
@@ -619,7 +619,7 @@
   :responses:
   - anguilla
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_nvn_ukot
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
