--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -1998,7 +1998,7 @@
   - transit
   - channel_islands_or_isle_of_man
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :channel_islands_or_isle_of_man?
   :responses:
@@ -2064,7 +2064,7 @@
   :responses:
   - kuwait
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
@@ -2488,7 +2488,7 @@
   - transit
   - channel_islands_or_isle_of_man
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :channel_islands_or_isle_of_man?
   :responses:
@@ -2554,7 +2554,7 @@
   :responses:
   - oman
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
@@ -2717,7 +2717,7 @@
   - transit
   - channel_islands_or_isle_of_man
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :channel_islands_or_isle_of_man?
   :responses:
@@ -2783,7 +2783,7 @@
   :responses:
   - stateless-or-refugee
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
@@ -3170,7 +3170,7 @@
   - transit
   - channel_islands_or_isle_of_man
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :channel_islands_or_isle_of_man?
   :responses:
@@ -3236,7 +3236,7 @@
   :responses:
   - taiwan
   - marriage
-  :next_node: :outcome_marriage
+  :next_node: :outcome_marriage_visa_nat_datv
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
