--- a/lib/data/rates/redundancy_pay.yml
+++ b/lib/data/rates/redundancy_pay.yml
@@ -19,3 +19,7 @@
   end_date: 2017-04-05
   max: "14,370"
   rate: 479
+- start_date: 2017-04-06
+  end_date: 2018-04-05
+  max: "14,670"
+  rate: 489
