--- a/test/data/configurations.yml
+++ b/test/data/configurations.yml
@@ -29,3 +29,5 @@
     :current_time: 2018-04-05
   "calculate-statutory-sick-pay":
     :current_time: 2018-04-05
+  "state-pension-through-partner":
+    :current_time: 2017-05-01
