Create an outcome template per path for USA
These templates will be used in the following commits.

No test artefacts were modified by this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -230,6 +230,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_title.govspe
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_opposite_sex.govspeak.erb: a9f9918c8d7a100785e17e03df4d2cb5
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_same_sex.govspeak.erb: 4ac2c9180a2c2d3e783a266d61fdfd70
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_title.govspeak.erb: 323cdb9e9165cdc8804dff528da5432f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_title.govspeak.erb: e24d6929f6cd7c7af6473149d4ea401c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 1b0f7a4383a5d04366195ccd5a420f99
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_british/_same_sex.govspeak.erb: 1aa2ec78b4b171ef8171f7a68a16a470
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 54ea5ecbf5e039704313f62b41528749
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_local/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 54ea5ecbf5e039704313f62b41528749
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_other/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_british/_opposite_sex.govspeak.erb: 3abf7d7d26919b7263eac30c38a228ab
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_british/_same_sex.govspeak.erb: 1aa2ec78b4b171ef8171f7a68a16a470
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_local/_opposite_sex.govspeak.erb: 53d516e21a11ca683629c900ebb04617
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_local/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_other/_opposite_sex.govspeak.erb: 53d516e21a11ca683629c900ebb04617
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/third_country/partner_other/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_british/_opposite_sex.govspeak.erb: 3abf7d7d26919b7263eac30c38a228ab
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_british/_same_sex.govspeak.erb: 1aa2ec78b4b171ef8171f7a68a16a470
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_local/_opposite_sex.govspeak.erb: 53d516e21a11ca683629c900ebb04617
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_local/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_other/_opposite_sex.govspeak.erb: 53d516e21a11ca683629c900ebb04617
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/uk/partner_other/_same_sex.govspeak.erb: fa2adb552bed9c2c659afb150698ba98
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/_title.govspeak.erb: c06734e76d0d2fac1472abf73e877c6b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 7e4c3be57026add826f295e858c4113f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_british/_same_sex.govspeak.erb: ab70383d4cea992bee5248e6781209df
