--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -1,7 +1,7 @@
 ---
 lib/smart_answer_flows/marriage-abroad.rb: a3cb54cc9f6194d55b5758a0936d33fb
 test/data/marriage-abroad-questions-and-responses.yml: 35a2f04fceb6c1c45cd96ca80dcba991
-test/data/marriage-abroad-responses-and-expected-results.yml: e80bd14234e01f4cebeb68e4fbe65582
+test/data/marriage-abroad-responses-and-expected-results.yml: 82325d79874da26e60006b0b8c37397b
 lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb: b4d0cfc1c7c4776d968c9b5b6df85027
 lib/smart_answer_flows/marriage-abroad/outcomes/_affirmation_os_translation_in_local_language_text.govspeak.erb: af09e09b909c563d4a587ef1b9285cca
 lib/smart_answer_flows/marriage-abroad/outcomes/_appointment_for_affidavit.govspeak.erb: 4db6fe2ec298d79aefaed0d4ff244e75
@@ -246,6 +246,8 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_title.govspe
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_opposite_sex.govspeak.erb: a9f9918c8d7a100785e17e03df4d2cb5
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_same_sex.govspeak.erb: 4ac2c9180a2c2d3e783a266d61fdfd70
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_title.govspeak.erb: 323cdb9e9165cdc8804dff528da5432f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_opposite_sex.govspeak.erb: 1b0f7a4383a5d04366195ccd5a420f99
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_same_sex.govspeak.erb: 1aa2ec78b4b171ef8171f7a68a16a470
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_title.govspeak.erb: e24d6929f6cd7c7af6473149d4ea401c
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 1b0f7a4383a5d04366195ccd5a420f99
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/ceremony_country/partner_british/_same_sex.govspeak.erb: 1aa2ec78b4b171ef8171f7a68a16a470
@@ -393,7 +395,7 @@ lib/smart_answer_flows/marriage-abroad/questions/partner_opposite_or_same_sex.go
 lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationality.govspeak.erb: 80e04f36c75c232bede1a244d621471e
 lib/data/rates/marriage_abroad_consular_fees.yml: 20afc9d15de06e0a199761433b055d9f
 lib/data/marriage_abroad_services.yml: a487a1dfe5db504bc0fb6c72b8a099c1
-lib/smart_answer/calculators/marriage_abroad_calculator.rb: 4336afe868d459acba66a18b5b8f3e6d
+lib/smart_answer/calculators/marriage_abroad_calculator.rb: 257e7e73af62ddf4b2149a453b224049
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 0bc67c4469fe692a4fa53c9b461821bf
 lib/smart_answer/calculators/marriage_abroad_data_query.rb: 9e29f80919bd22ca68b900dd4b97372a
 lib/smart_answer/calculators/country_name_formatter.rb: 583df7103672f581bf5510732c1b2be1
