Create an outcome template per path for Spain
These templates will be used in the following commits.

No test artefacts were modified by this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -613,6 +613,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partne
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_local/_same_sex.govspeak.erb: 72d40d32cac4771cd96f3e5667211d77
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_other/_opposite_sex.govspeak.erb: 54480804bdd7eb5e8ca52f6ec8d9ae87
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_other/_same_sex.govspeak.erb: 54480804bdd7eb5e8ca52f6ec8d9ae87
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/_title.govspeak.erb: 0b6911a1fe309cbd25039b854327fcac
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 0610e9ea29db3dd61e5b895ec49a4c33
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_british/_same_sex.govspeak.erb: 68267010a6573131577061797913b027
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_local/_opposite_sex.govspeak.erb: ca6b7d1354225e10a27df144df8cc343
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_local/_same_sex.govspeak.erb: a0ffd261cb572cfac5141473cf3e95b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_other/_opposite_sex.govspeak.erb: ca6b7d1354225e10a27df144df8cc343
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/ceremony_country/partner_other/_same_sex.govspeak.erb: a0ffd261cb572cfac5141473cf3e95b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_british/_opposite_sex.govspeak.erb: 3a387d77785789735c16a683b9e255de
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_british/_same_sex.govspeak.erb: 0ecabb8e6ca902a8b4303e7fa8c1edb1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_local/_opposite_sex.govspeak.erb: a9f6a5b4145bef78b0710b29dbfc2093
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_local/_same_sex.govspeak.erb: 4f489abe19be0a4e3e7a98bf90bfc24c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_other/_opposite_sex.govspeak.erb: 1376650e8bc887b2745789f98db2c9b4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/third_country/partner_other/_same_sex.govspeak.erb: 0f0befe7888a4510094deb19f2884603
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_british/_opposite_sex.govspeak.erb: 36bff9a76ae06e42a8dee66c173de62c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_british/_same_sex.govspeak.erb: 383d3e26a1dac0dc34f9ee93fa54698d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_local/_opposite_sex.govspeak.erb: 8559031c1b522f57ed7e55a4d19e8e02
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_local/_same_sex.govspeak.erb: 04af8503422a1658634ab785b16c2db4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_other/_opposite_sex.govspeak.erb: 8559031c1b522f57ed7e55a4d19e8e02
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/partner_other/_same_sex.govspeak.erb: 04af8503422a1658634ab785b16c2db4
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.govspeak.erb: 0a2cc626a2299c1297363135c8aca02b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 026c60e08b84cbee3f2ac71d12eb6f4e
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_same_sex.govspeak.erb: e3a0f811317edef414312dafd7a11b77
