--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -1099,6 +1099,11 @@
   :outcome_node: true
 - :current_node: :what_passport_do_you_have?
   :responses:
+  - estonia
+  :next_node: :outcome_no_visa_needed
+  :outcome_node: true
+- :current_node: :what_passport_do_you_have?
+  :responses:
   - israel
   :next_node: :israeli_document_type?
   :outcome_node: false
