--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -120,6 +120,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_loc
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_local/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_opposite_sex.govspeak.erb: 3792c9972e4b5655045ddb1399952cd7
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/_title.govspeak.erb: f39ccaa6dcb717572ead89eecdee6b60
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_british/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_local/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_other/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_british/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_british/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_local/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_local/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_other/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/third_country/partner_other/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_british/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_british/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_local/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_local/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_other/_opposite_sex.govspeak.erb: 46ed34d6c1fa43bc04ccdb3a4194885f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_other/_same_sex.govspeak.erb: 45a0e9a164866db1d8fac512f28edbba
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_opposite_sex.govspeak.erb: f0abd764c71f1af9f3b0a625bfb7e185
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_same_sex.govspeak.erb: 8b85a31d089af46889eb665136403ce0
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_title.govspeak.erb: c7f3e2d5e41aa82806b1aedbe69b33b8
