Update outcome to remove form LS01
Remove link to LS01 PDF form because from 1 May users have to use
the online service instead.

Changes content to reflect.

Rename the outcome to no longer be based on the name of the PDF
form. Update regression tests accordingly.

--- a/test/data/report-a-lost-or-stolen-passport-responses-and-expected-results.yml
+++ b/test/data/report-a-lost-or-stolen-passport-responses-and-expected-results.yml
@@ -2,7 +2,7 @@
 - :current_node: :where_was_the_passport_lost_or_stolen?
   :responses:
   - in_the_uk
-  :next_node: :complete_LS01_form
+  :next_node: :report_lost_or_stolen_passport
   :outcome_node: true
 - :current_node: :where_was_the_passport_lost_or_stolen?
   :responses:
