Create an outcome per path for Chile
The goal of this story is to migrate the flow for Chile to
use the outcome per path strategy.

Within, flat content have been introduced for Chile. The flat conntent
will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -76,6 +76,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/_title.govspeak.erb: cd0916ae860ff1ebf2726dd135907dcc
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_opposite_sex.govspeak.erb: e0bd89050cc31b5b010f07f6c6bec9cf
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_same_sex.govspeak.erb: d2f9a087b393386c1d81733284e5d6b8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_local/_opposite_sex.govspeak.erb: a936f81484bd325f7b597b39a1ef5d81
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_local/_same_sex.govspeak.erb: 39c9884a91f921ae50f455c3232ff84d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_other/_opposite_sex.govspeak.erb: a936f81484bd325f7b597b39a1ef5d81
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_other/_same_sex.govspeak.erb: d361b659b8865c033577a66022e61f6f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_british/_opposite_sex.govspeak.erb: 219816d1aa8adf02d17ac27b0900ddfd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_british/_same_sex.govspeak.erb: d2f9a087b393386c1d81733284e5d6b8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_local/_opposite_sex.govspeak.erb: 0962a55a3c8c215978d4f5d38a7fc09c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_local/_same_sex.govspeak.erb: 39c9884a91f921ae50f455c3232ff84d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_other/_opposite_sex.govspeak.erb: b20417576f2a413ff48092db713c67a0
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/third_country/partner_other/_same_sex.govspeak.erb: d361b659b8865c033577a66022e61f6f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_british/_opposite_sex.govspeak.erb: c14911facefd54b27af8508d6edf6f17
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_british/_same_sex.govspeak.erb: d2f9a087b393386c1d81733284e5d6b8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_local/_opposite_sex.govspeak.erb: 402c5ef17562e5d85bd6fd4f9bfb0980
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_local/_same_sex.govspeak.erb: 39c9884a91f921ae50f455c3232ff84d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_other/_opposite_sex.govspeak.erb: 402c5ef17562e5d85bd6fd4f9bfb0980
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_other/_same_sex.govspeak.erb: d361b659b8865c033577a66022e61f6f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb: b0439c1c2ad5c8ecc94767a5758236a4
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb: e340d6a3813ce12db74ebd60a89b95bd
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_title.govspeak.erb: 475112c09ab99bdd0d610ab1e79cb0fd
